--- a/FerryBackendB/FerryBackendB.csproj
+++ b/FerryBackendB/FerryBackendB.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.Data.6.9.8\lib\net45\MySql.Data.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,6 +49,7 @@
     <Compile Include="CustomerHandler.cs" />
     <Compile Include="DockHandler.cs" />
     <Compile Include="FerryHandler.cs" />
+    <Compile Include="MySQLConn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReservationHandler.cs" />
     <Compile Include="RouteHandler.cs" />
@@ -56,6 +61,10 @@
       <Project>{e0b09284-c1f4-444f-8e89-8eef4cf832a3}</Project>
       <Name>Contract</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
